--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,12 +27,12 @@
         android:id="@+id/frameLayout"
         android:layout_width="match_parent"
         android:layout_weight="1"
-        android:layout_height="match_parent"/>
+        android:layout_height="0dp"/>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigationView"
         android:layout_width="match_parent"
-        android:layout_height="90dp"
+        android:layout_height="85dp"
         android:paddingTop="5dp"
         android:paddingBottom="5dp"
         android:background="@drawable/navbar_background"
