--- a/app/src/main/res/layout/practice.xml
+++ b/app/src/main/res/layout/practice.xml
@@ -23,6 +23,7 @@
         app:mcv_allowClickDaysOutsideCurrentMonth="false"
         app:mcv_arrowColor="#98B2FF"
         app:mcv_calendarMode="month"
+        app:mcv_tileSize="match_parent"
         app:mcv_dateTextAppearance="@style/TextAppearance.AppCompat.Small"
         app:mcv_headerTextAppearance="@style/MyDatePicker"
         app:mcv_selectionColor="#19FFFFFF"
