--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:layout_height="90dp"
         android:gravity="center_horizontal|bottom"
         android:paddingEnd="15dp"
-        android:background="#00FFFFFF"
+        android:background="@drawable/container_box"
         app:buttonGravity="center_vertical"
         app:title="Home"
         app:titleMarginBottom="20dp"
