--- a/app/src/main/res/layout/fragment_leave.xml
+++ b/app/src/main/res/layout/fragment_leave.xml
@@ -2,9 +2,11 @@
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/coordinatorLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/app_background"
+    android:theme="@style/Theme.DoNotDim"
     tools:context=".LeaveFragment">
 
 
@@ -30,6 +32,14 @@
         android:backgroundTint="#4E10FF"
         android:contentDescription="New"
         android:src="@drawable/fab_new_leave" />
+    <View
+        android:id="@+id/circle2"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        app:layout_anchor="@+id/fab"
+        android:visibility="invisible"
+        android:background="@drawable/circle2"
+        app:layout_anchorGravity="center" />
     <View
         android:id="@+id/circle"
         android:layout_width="40dp"
