--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,15 +1,322 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ProfileFragment">
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:gravity="center"
+    android:background="@drawable/app_background"
+    android:paddingEnd="20dp"
+    android:paddingStart="20dp"
+    android:theme="@style/Theme.DoNotDim"
+    tools:context=".ProfileFragment"
+    >
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Profile" />
+        android:scrollbars="none"
+        android:layout_height="match_parent">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="start"
+        android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:padding="30dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/container_box"
+            android:orientation="vertical">
 
-</FrameLayout>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_marginBottom="10dp"
+            android:layout_height="match_parent">
+
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/profile_picture"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:layout_margin="10dp"
+            android:scaleType="fitCenter"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:shapeAppearanceOverlay="@style/ImageView.Circle"
+            app:srcCompat="@drawable/avatar_default" />
+            <ImageView
+                android:id="@+id/edit_profile_picture_button"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_marginEnd="-10dp"
+                android:layout_marginBottom="-10dp"
+                android:padding="8dp"
+                android:src="@drawable/profile_pic_edit"
+                app:layout_constraintBottom_toBottomOf="@id/profile_picture"
+                app:layout_constraintEnd_toEndOf="@id/profile_picture"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+<!--        <ImageView-->
+<!--            android:layout_width="164dp"-->
+<!--            android:layout_height="156dp"-->
+<!--            android:layout_gravity="center"-->
+<!--            android:src="@drawable/ellipse_22"/>-->
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="346dp"
+            android:layout_height="32dp"
+            android:layout_gravity="center"
+            android:text="Profile Name"
+            android:textColor="@color/white"
+            android:textAlignment="center"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            />
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/personal_information"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:textColor="@color/white"
+            android:layout_marginTop="40dp"/>
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="360dp"
+            android:layout_marginTop="20dp"
+            android:layout_gravity=""
+            android:background="@drawable/rectangle_48">
+            <ImageView
+                android:layout_marginTop="20dp"
+                android:layout_width="71dp"
+                android:layout_height="45dp"
+                android:src="@drawable/group_109"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/email"
+                android:layout_marginTop="35dp"
+                android:textAppearance="@style/profile_fields_key"
+                android:layout_marginLeft="70dp"
+                />
+
+            <TextView
+                android:id="@+id/textView9"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="125dp"
+                android:layout_marginTop="30dp"
+                android:layout_marginEnd="10dp"
+                android:text=""
+                android:textAlignment="viewEnd"
+                android:textColor="@color/white"
+                android:textSize="14sp" />
+            <ImageView
+                android:layout_marginTop="55dp"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:src="@drawable/line_6"/>
+            <ImageView
+                android:layout_marginTop="90dp"
+                android:layout_width="71dp"
+                android:layout_height="45dp"
+                android:src="@drawable/group_116"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/mobile"
+                android:layout_marginTop="105dp"
+                android:textAppearance="@style/profile_fields_key"
+                android:layout_marginLeft="70dp"/>
+
+            <TextView
+                android:id="@+id/textView10"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="140dp"
+                android:layout_marginTop="103dp"
+                android:layout_marginEnd="10dp"
+                android:text=""
+                android:textAlignment="viewEnd"
+                android:textColor="@color/white"
+                android:textSize="14sp" />
+            <ImageView
+                android:layout_marginTop="125dp"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:src="@drawable/line_6"/>
+            <!--        DOB-->
+            <ImageView
+                android:layout_marginTop="160dp"
+                android:layout_width="71dp"
+                android:layout_height="45dp"
+                android:src="@drawable/group_132"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/date_of_birth"
+                android:layout_marginTop="175dp"
+                android:textAppearance="@style/profile_fields_key"
+                android:layout_marginLeft="70dp"/>
+
+            <TextView
+                android:id="@+id/textView11"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="140dp"
+                android:layout_marginTop="173dp"
+                android:layout_marginEnd="10dp"
+                android:text=""
+                android:textAlignment="viewEnd"
+                android:textColor="@color/white"
+                android:textSize="14sp" />
+            <ImageView
+                android:layout_marginTop="195dp"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:src="@drawable/line_6"/>
+            <!--        Course-->
+            <ImageView
+                android:layout_marginTop="230dp"
+                android:layout_width="71dp"
+                android:layout_height="45dp"
+                android:src="@drawable/group_118"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Course"
+                android:layout_marginTop="245dp"
+                android:textAppearance="@style/profile_fields_key"
+                android:layout_marginLeft="70dp"/>
+
+            <TextView
+                android:id="@+id/textView12"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="140dp"
+                android:layout_marginTop="243dp"
+                android:layout_marginEnd="10dp"
+                android:text=""
+                android:textAlignment="viewEnd"
+                android:textColor="@color/white"
+                android:textSize="14sp" />
+            <ImageView
+                android:layout_marginTop="262dp"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:src="@drawable/line_6"/>
+            <!--        College-->
+            <ImageView
+                android:layout_marginTop="295dp"
+                android:layout_width="71dp"
+                android:layout_height="45dp"
+                android:src="@drawable/group_206"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="College"
+                android:layout_marginTop="310dp"
+                android:textAppearance="@style/profile_fields_key"
+                android:layout_marginLeft="70dp"/>
+
+            <TextView
+                android:id="@+id/textView14"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="140dp"
+                android:layout_marginTop="305dp"
+                android:layout_marginEnd="10dp"
+                android:text=""
+                android:textAlignment="viewEnd"
+                android:textColor="@color/white"
+                android:textSize="14sp" />
+        </FrameLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="More Actions"
+            android:textSize="16sp"
+            android:layout_marginTop="40dp"
+            android:textStyle="bold"
+            android:textColor="@color/white"/>
+
+        <LinearLayout
+            android:id="@+id/changePwd"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center_vertical"
+            android:padding="10dp"
+            android:background="@drawable/rectangle_51"
+            android:layout_marginTop="15dp">
+
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="45dp"
+                android:layout_marginEnd="20dp"
+                android:src="@drawable/group_111" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="Change Password"
+                android:gravity="start|center_vertical"
+                android:layout_weight="1"
+                android:textAppearance="@style/profile_fields_key"
+                android:textSize="13sp"
+                android:textColor="@color/white" />
+            <ImageView
+                android:layout_width="15dp"
+                android:layout_height="15dp"
+                android:layout_marginEnd="20dp"
+                android:src="@drawable/arrow_right" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/logout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center_vertical"
+            android:padding="10dp"
+            android:background="@drawable/rectangle_51"
+            android:layout_marginTop="15dp">
+
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="45dp"
+                android:layout_marginEnd="20dp"
+                android:src="@drawable/group_208" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="Logout"
+                android:gravity="start|center_vertical"
+                android:layout_weight="1"
+                android:textAppearance="@style/profile_fields_key"
+                android:textSize="13sp"
+                android:textColor="#FF5A26" />
+
+            <ImageView
+                android:layout_width="15dp"
+                android:layout_height="15dp"
+                android:layout_marginEnd="20dp"
+                android:src="@drawable/arrow_right" />
+        </LinearLayout>
+
+
+    </LinearLayout>
+    </ScrollView>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
