--- a/app/src/main/res/layout/review_leave_card.xml
+++ b/app/src/main/res/layout/review_leave_card.xml
@@ -1,100 +1,97 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        app:cardCornerRadius="15dp"
-        app:cardBackgroundColor="#3A354B"
-        android:layout_height="120dp">
+<androidx.cardview.widget.CardView
+xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+app:cardCornerRadius="15dp"
+app:cardBackgroundColor="#3A354B"
+android:layout_height="120dp">
 
 <!--        android:padding="20dp"-->
-        <!-- Main Layout of the card-->
+    <!-- Main Layout of the card-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+<!--        Top Layout for image and data-->
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-<!--        Top Layout for image and data-->
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:clipChildren="true"
+            android:gravity="fill_horizontal|center_vertical"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/review_leave_card_image"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:padding="10dp"
+                android:src="@drawable/neb_logo"/>
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:paddingStart="10dp"
                 android:layout_weight="1"
-                android:clipChildren="true"
-                android:gravity="fill_horizontal|center_vertical"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/review_leave_card_image"
-                    android:layout_width="70dp"
-                    android:layout_height="70dp"
-                    android:padding="10dp"
-                    android:src="@drawable/neb_logo"/>
-                <LinearLayout
+                android:orientation="vertical">
+                <TextView
+                    android:id="@+id/review_leave_card_leave_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:paddingStart="10dp"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
-                    <TextView
-                        android:id="@+id/review_leave_card_leave_title"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Leave Header"
-                        android:textAppearance="@style/leave_card_header"/>
-                    <TextView
-                        android:id="@+id/review_leave_card_leave_duration"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Duration"
-                        android:textAppearance="@style/leave_card_duration"/>
-                </LinearLayout>
-                <RelativeLayout
-                    android:layout_width="50dp"
-                    android:gravity="center"
-                    android:padding="10dp"
-                    android:layout_marginTop="-23dp"
-                    android:layout_marginEnd="-5dp"
-                    android:background="@drawable/leave_count_background"
-                    android:layout_height="50dp">
-                    <TextView
-                        android:id="@+id/review_leave_card_leave_count"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="5"
-                        android:textAppearance="@style/leave_card_count"/>
-                </RelativeLayout>
+                    android:text="Leave Header"
+                    android:textAppearance="@style/leave_card_header"/>
+                <TextView
+                    android:id="@+id/review_leave_card_leave_duration"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Duration"
+                    android:textAppearance="@style/leave_card_duration"/>
             </LinearLayout>
-<!--            Bottom Layout for Leave Status-->
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+            <RelativeLayout
+                android:layout_width="50dp"
                 android:gravity="center"
-                android:background="@drawable/leave_grant_background"
-                android:padding="7dp"
-                android:orientation="horizontal">
+                android:padding="10dp"
+                android:layout_marginTop="-23dp"
+                android:layout_marginEnd="-5dp"
+                android:background="@drawable/leave_count_background"
+                android:layout_height="50dp">
                 <TextView
-                    android:id="@+id/review_leave_card_status"
+                    android:id="@+id/review_leave_card_leave_count"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="10dp"
-                    android:text="Status By"
-                    android:textAppearance="@style/leave_card_status_text"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="10dp"
-                    android:text="-"
-                    android:textAppearance="@style/leave_card_status_text"/>
-                <TextView
-                    android:id="@+id/review_leave_card_faculty"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Faculty Name"
-                    android:textAppearance="@style/leave_card_status_text"/>
-            </LinearLayout>
+                    android:text="5"
+                    android:textAppearance="@style/leave_card_count"/>
+            </RelativeLayout>
         </LinearLayout>
-    </androidx.cardview.widget.CardView>
-
-</LinearLayout>
+<!--            Bottom Layout for Leave Status-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:background="@drawable/leave_grant_background"
+            android:padding="7dp"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/review_leave_card_status"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="10dp"
+                android:text="Status By"
+                android:textAppearance="@style/leave_card_status_text"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="10dp"
+                android:text="-"
+                android:textAppearance="@style/leave_card_status_text"/>
+            <TextView
+                android:id="@+id/review_leave_card_faculty"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Faculty Name"
+                android:textAppearance="@style/leave_card_status_text"/>
+        </LinearLayout>
+    </LinearLayout>
+</androidx.cardview.widget.CardView>
